package org.alkemy.alkywallet.utils;

public enum Rol {
    ADMIN,
    USER
}
