package org.alkemy.alkywallet.utils;

public enum TipoMoneda {
    ARS,
    USD,
    EUR
}
