package org.alkemy.alkywallet.utils;

public enum TipoTarjeta {
    CREDITO,
    DEBITO,
    ALKYWALLET,
    OTRA
}
